# tcap-benchmarks

./: rpc-latency-node-client.patch
baseline-grpc/: Cargo.toml  build.rs
baseline-grpc/proto/: simple.proto
baseline-grpc/src/: client.rs  main.rs  server.rs
denial-of-service/: Cargo.toml  run-server.sh  run.sh
denial-of-service/src/: client.rs  csv_writer.rs  main.rs  server.rs
fractos-star-vs-chain/: Makefile
fractos-star-vs-chain/src/: client.cpp  server.cpp  shared.hpp
fractos-star-vs-chain/util/: app.mk
latency-dependet-on-num-of-caps/: Cargo.toml
latency-dependet-on-num-of-caps/src/: main.rs
pingpong-client/: Cargo.toml
pingpong-client/benches/: pingpong-latency.rs
pingpong-client/src/: main.rs
pingpong-server/: Cargo.toml
pingpong-server/src/: main.rs
simulation-facever/: Cargo.toml  run-server.sh  run.sh
simulation-facever/src/: client.rs  frontend.rs  fs.rs  gpu.rs  main.rs  storage.rs
star-vs-chain-execution/: Cargo.toml  readme.md  run-scaling.sh  run-server-scaling.sh  run-server.sh  run.sh
star-vs-chain-execution/src/: chain.rs  main.rs  star.rs
throughput/: Cargo.toml  run-scaling.sh  run-server-scaling.sh  run-server.sh  run.sh
throughput/src/: client.rs  main.rs  server.rs
time-distribution-dep-num-caps/src/: main.rs
