[package]
name = "baseline-grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
prost = "0.12"
tonic = "0.10.2"
csv = "1.3.0"
clap = { version = "4.4.7", features = ["derive"] }
log = "0.4.20"
simple_logger = "4.2.0"

[build-dependencies]
tonic-build = "0.10"