[package]
name = "pingpong-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tcap = {path="../../tcap-rs"}
tokio = { version = "1", features = ["full"] }
async-std = "1.12.0"
log = "0.4.20"
simple_logger = "4.2.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "async_futures" ] }

[[bench]]
name = "pingpong-latency"
harness = false