[package]
name = "simulation-facever"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tcap = {path="../../tcap-rs", no-default-features=false}
tokio = { version = "1", features = ["full"] }
log = "0.4.20"
simple_logger = "4.2.0"
csv = "1.3.0"
clap = { version = "4.4.7", features = ["derive"] }