[package]
name = "star-vs-chain-execution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tcap = {path="../../tcap-rs"}
tokio = { version = "1", features = ["full"] }
async-std = "1.12.0"
log = "0.4.20"
simple_logger = "4.2.0"
csv = "1.3.0"
clap = { version = "4.4.7", features = ["derive"] }
lazy_static = "1.4.0"
